# yle-dl-plex

./: .gitignore  AGENTS.md  LICENSE  README.md  data.json  pyproject.toml
.github/workflows/: ci.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_be7431c190910c5f___init___py.html  z_be7431c190910c5f___main___py.html  z_be7431c190910c5f_areena_py.html  z_be7431c190910c5f_cli_py.html  z_be7431c190910c5f_nfo_py.html  z_be7431c190910c5f_yledl_py.html
src/yle_dl_plex/: __main__.py  areena.py  cli.py  nfo.py  yledl.py
tests/: conftest.py  test_areena.py  test_areena_http.py  test_cli_helpers.py  test_cli_http.py  test_integration.py  test_nfo.py  test_yledl.py
