[project]
name = "yle-dl-plex"
version = "0.1.0"
description = "Download a Yle Areena TV series with yle-dl and produce Plex NFO + artwork."
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Timo Taskinen", email = "timo.taskinen@iki.fi" }]
dependencies = [
  "yle-dl>=20250730",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]

[project.scripts]
yle-dl-plex = "yle_dl_plex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yle_dl_plex"]
