[project]
name = "yle-dl-plex"
version = "0.1.0"
description = "Download a Yle Areena TV series with yle-dl and produce Plex NFO + artwork."
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Timo Taskinen", email = "timo.taskinen@iki.fi" }]
dependencies = [
  "yle-dl>=20250730",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]

[project.scripts]
yle-dl-plex = "yle_dl_plex.cli:main"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yle_dl_plex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]

[tool.coverage.run]
source = ["yle_dl_plex"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src/yle_dl_plex"]

[[tool.mypy.overrides]]
module = ["yledl", "yledl.*"]
ignore_missing_imports = true
